Imported from https://apetres@github.com/apetres/ce-mancam-azi-bot.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/apetres
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/apetres
+	label-Verified = -1..+1 group user/apetres
+	push = group user/apetres
+	read = group user/apetres
+	rebase = group user/apetres
+	removeReviewer = group user/apetres
+	submit = group user/apetres
+[access "refs/heads/*"]
+	create = group user/apetres
+	push = +force group user/apetres
+	pushMerge = group user/apetres
+	read = group user/apetres
+[access "refs/tags/*"]
+	push = group user/apetres
+	push = +force group user/apetres
